# ha-svitlo-yeah

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  README.md  pyproject.toml
.amazonq/rules/: rules.md
.amazonq/rules/memory-bank/: dtek_region.md
.clinerules/: rules.md
.clinerules/workflows/: pre-commit.md  tests.md
.github/: release-drafter.yml
.github/workflows/: checks.yml  release_draft.yml
custom_components/svitlo_yeah/: __init__.py  calendar.py  config_flow.py  const.py  entity.py  manifest.json  models.py  sensor.py
custom_components/svitlo_yeah/api/: __init__.py  common_tools.py  dtek.py  e_svitlo.py  yasno.py
custom_components/svitlo_yeah/api/dtek/: __init__.py  base.py  html.py  json.py
custom_components/svitlo_yeah/coordinator/: coordinator.py  dtek.py  e_svitlo.py  yasno.py
custom_components/svitlo_yeah/coordinator/dtek/: __init__.py  base.py  html.py  json.py
custom_components/svitlo_yeah/models/: __init__.py  providers.py
custom_components/svitlo_yeah/translations/: en.json  ru.json  uk.json
examples/: automation.yaml  dashboard.yaml
script/: update_version.py
tests/: conftest.py  test_api_dtek.py  test_api_e_svitlo.py  test_api_yasno.py  test_calendar.py  test_common_tools.py  test_config_flow.py  test_coordinator.py  test_coordinator_data_changed.py  test_coordinator_e_svitlo.py  test_dtek_base.py  test_dtek_factory.py  test_dtek_html_api.py  test_dtek_json_api.py  test_models.py  test_sensor.py  test_sensor_attributes.py
