[project]
name = "ha-svitlo-yeah"
version = "0.6.17"  # Remember to change this in the manifest.json
description = "A Home Assistant integration that provides power outage schedules for Ukraine"
readme = "README.md"
requires-python = ">=3.13.2"  # Follows https://github.com/home-assistant/core/blob/dev/pyproject.toml
dependencies = []

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "homeassistant>=2025.12.2",
    "pre-commit-uv>=4.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
minversion = "8.3.5"
addopts = "-ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
