[project]
name = "ha-svitlo-yeah"
version = "0.6.23"  # Remember to change this in the manifest.json
description = "A Home Assistant integration that provides power outage schedules for Ukraine"
readme = "README.md"
requires-python = ">=3.13.2"  # Follows https://github.com/home-assistant/core/blob/dev/pyproject.toml
dependencies = []

[dependency-groups]
dev = [
    "homeassistant>=2026.1.0",
    "pre-commit-uv",
    "pytest",
    "freezegun",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
minversion = "8.3.5"
addopts = "-ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
